# GaussFilt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: config.h.in
include/: cli.h  filter.h  gui.h  image.h
src/: cli.cc  filter.cc  filter.h  gui.cc  gui.h  image.cc  image.h  imgui.h  main.cc  render.h
